# gpm_api_consumer

./: .gitignore  Client.py  ConfigManager.py  Consumers.py  Interpreters.py  Operators.py  README.md  exceptions.py  gpm_consumer_cli.py  pyproject.toml  try.py  utils.py
gpm_api_consumer/: __init__.py  cli.py
gpm_api_consumer/core/: Client.py  ConfigManager.py  Consumers.py  FileManager.py  Imputers.py  Interpreters.py  Operator2.py  Operators.py  exceptions.py
gpm_api_consumer/utils/: __init__.py  decorators.py  utils.py
