[project]
name = "gpm_api_consumer"
version = "0.1.2"
description = "Consumidor de la API GPM para uso interno"
authors = [
    { name = "Diego Gallegos", email = "dgallegos@revergy.es" }
]
readme = "README.md"
requires-python = ">=3.9.20"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.scripts]
gpm-cli = "gpm_api_consumer.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpm_api_consumer*"]
